--- a/fixture/default/core/Mage/SystemConfiguration/uimap/admin/SystemConfiguration.yml
+++ b/fixture/default/core/Mage/SystemConfiguration/uimap/admin/SystemConfiguration.yml
@@ -1206,26 +1206,15 @@ system_configuration:
                                         use_aggregated_data: //select[@name='groups[dashboard][fields][use_aggregated_data][value]']
                             -
                                 gift_options:
-                                    xpath: //div/fieldset[legend='Gift Options']
+                                    xpath: //fieldset[@id='sales_gift_options']
                                     links:
-                                        gift_options_link: //a[text()='Gift Options']
+                                        gift_options_link: //parent::div//a[@id='sales_gift_options-head']
                                     dropdowns:
-                                        allow_gift_messages_on_order_level: //select[@id='sales_gift_options_allow_order']
-                                        allow_gift_messages_for_order_items: //select[@id='sales_gift_options_allow_items']
-                                        allow_gift_wrapping_on_order_level: //select[@id='sales_gift_options_wrapping_allow_order']
-                                        allow_gift_wrapping_for_order_items: //select[@id='sales_gift_options_wrapping_allow_items']
-                                        allow_gift_receipt: //select[@id='sales_gift_options_allow_gift_receipt']
-                                        allow_gift_printered_card: //select[@id='sales_gift_options_allow_printed_card']
-                                    fields:
-                                        default_price_for_printed_card: //input[@id='sales_gift_options_printed_card_price']
+                                        allow_gift_messages_on_order_level: //select[@name='groups[gift_options][fields][allow_order][value]']
+                                        allow_gift_messages_for_order_items: //select[@name='groups[gift_options][fields][allow_items][value]']
                                     checkboxes:
                                         allow_gift_messages_on_order_level_use_default: //input[@name='groups[gift_options][fields][allow_order][inherit]']
                                         allow_gift_messages_for_order_items_use_default: //input[@name='groups[gift_options][fields][allow_items][inherit]']
-                                        allow_gift_wrapping_on_order_level_use_default: //input[@name='groups[gift_options][fields][wrapping_allow_order][inherit]']
-                                        allow_gift_wrapping_for_order_items_use_default: //input[@name='groups[gift_options][fields][wrapping_allow_items][inherit]']
-                                        allow_gift_receipt_use_default: //input[@name='groups[gift_options][fields][allow_gift_receipt][inherit]']
-                                        allow_gift_printered_card_use_default: //input[@name='groups[gift_options][fields][allow_printed_card][inherit]']
-                                        default_price_for_printed_card_use_default: //input[@name='groups[gift_options][fields][printed_card_price][inherit]']
                             -
                                 minimum_advertised_price:
                                     xpath: //fieldset[@id='sales_msrp']
