--- a/fixture/default/core/Mage/Product/data/Product.yml
+++ b/fixture/default/core/Mage/Product/data/Product.yml
@@ -531,10 +531,10 @@ simple_product:
 
 duplicate_simple:
     product_attribute_set: Default
-    general_name: Duplicate Simple Product
+    general_name: Duplicate Simple Product(%randomize%)
     general_description: Description for Simple Product
     general_short_description: Short Description for Simple Product
-    general_sku: simple_sku
+    general_sku: simple_sku_%randomize%
     general_weight: 2.56
     general_news_from: %currentDate%
     general_news_to: %currentDate%
@@ -576,9 +576,18 @@ duplicate_simple:
     gift_options_allow_gift_message: Yes
     websites: Main Website
     categories: Default Category
-    related_data: *relatedProductsData
-    up_sells_data: *upSellsProductsData
-    cross_sells_data: *crossSellsProductsData
+    related_data: &relatedDuplicate
+        related_1:
+            related_search_sku: %noValue%
+            related_product_position: 10
+    up_sells_data: &upSellsDuplicate
+        up_sells_1:
+            up_sells_search_sku: %noValue%
+            up_sells_product_position: 20
+    cross_sells_data: &crossSellsDuplicate
+        cross_sells_1:
+            cross_sells_search_sku: %noValue%
+            cross_sells_product_position: 30
     custom_options_data: *customOptionsData
 
 #*********************************************
@@ -685,10 +694,10 @@ virtual_product:
 
 duplicate_virtual:
     product_attribute_set: Default
-    general_name: Duplicate Virtual Product
+    general_name: Duplicate Virtual Product(%randomize%)
     general_description: Description for Virtual Product
     general_short_description: Short Description for Virtual Product
-    general_sku: virtual_sku
+    general_sku: virtual_sku_%randomize%
     general_news_from: %currentDate%
     general_news_to: %currentDate%
     general_url_key: virtual-product-url-key
@@ -728,9 +737,9 @@ duplicate_virtual:
     gift_options_allow_gift_message: Yes
     websites: Main Website
     categories: Default Category
-    related_data: *relatedProductsData
-    up_sells_data: *upSellsProductsData
-    cross_sells_data: *crossSellsProductsData
+    related_data: *relatedDuplicate
+    up_sells_data: *upSellsDuplicate
+    cross_sells_data: *crossSellsDuplicate
     custom_options_data: *customOptionsData
 
 #*********************************************
@@ -902,11 +911,11 @@ fixed_bundle:
 
 duplicate_fixed_bundle:
     product_attribute_set: Default
-    general_name: Duplicate Bundle(Fixed) Product
+    general_name: Duplicate Bundle(Fixed) Product(%randomize%)
     general_description: Description for Bundle(Fixed) Product
     general_short_description: Short Description for Bundle(Fixed) Product
     general_sku_type: Fixed
-    general_sku: bundle_sku
+    general_sku: bundle_sku_%randomize%
     general_weight_type: Fixed
     general_weight: 0.111
     general_news_from: %currentDate%
@@ -935,9 +944,9 @@ duplicate_fixed_bundle:
     gift_options_allow_gift_message: Yes
     websites: Main Website
     categories: Default Category
-    related_data: *relatedProductsData
-    up_sells_data: *upSellsProductsData
-    cross_sells_data: *crossSellsProductsData
+    related_data: *relatedDuplicate
+    up_sells_data: *upSellsDuplicate
+    cross_sells_data: *crossSellsDuplicate
     custom_options_data: *customOptionsData
     bundle_items_data:
         ship_bundle_items: Separately
@@ -947,7 +956,7 @@ duplicate_fixed_bundle:
             bundle_items_is_required: Yes
             bundle_items_position: 1
             add_product_1:
-                bundle_items_search_sku: %noValue%
+                bundle_items_search_sku: %product_1%
                 selection_item_price: 10
                 selection_item_price_type: Fixed
                 selection_item_default_qty: 10
@@ -959,7 +968,7 @@ duplicate_fixed_bundle:
             bundle_items_is_required: No
             bundle_items_position: 2
             add_product_1:
-                bundle_items_search_sku: %noValue%
+                bundle_items_search_sku: %product_2%
                 selection_item_price: 20
                 selection_item_price_type: Percent
                 selection_item_default_qty: 20
@@ -969,11 +978,11 @@ duplicate_fixed_bundle:
 
 duplicate_dynamic_bundle:
     product_attribute_set: Default
-    general_name: Duplicate Bundle(Dynamic) Product
+    general_name: Duplicate Bundle(Dynamic) Product(%randomize%)
     general_description: Description for Bundle(Dynamic) Product
     general_short_description: Short Description for Bundle(Dynamic) Product
     general_sku_type: Dynamic
-    general_sku: bundle_sku
+    general_sku: bundle_sku_%randomize%
     general_weight_type: Dynamic
     general_news_from: %currentDate%
     general_news_to: %currentDate%
@@ -1000,9 +1009,9 @@ duplicate_dynamic_bundle:
     gift_options_allow_gift_message: Yes
     websites: Main Website
     categories: Default Category
-    related_data: *relatedProductsData
-    up_sells_data: *upSellsProductsData
-    cross_sells_data: *crossSellsProductsData
+    related_data: *relatedDuplicate
+    up_sells_data: *upSellsDuplicate
+    cross_sells_data: *crossSellsDuplicate
     bundle_items_data:
         ship_bundle_items: Separately
         item_1:
@@ -1011,7 +1020,7 @@ duplicate_dynamic_bundle:
             bundle_items_is_required: Yes
             bundle_items_position: 1
             add_product_1:
-                bundle_items_search_sku: %noValue%
+                bundle_items_search_sku: %product_1%
                 selection_item_default_qty: 10
                 selection_item_position: 10
                 selection_item_default: Yes
@@ -1021,7 +1030,7 @@ duplicate_dynamic_bundle:
             bundle_items_is_required: No
             bundle_items_position: 2
             add_product_1:
-                bundle_items_search_sku: %noValue%
+                bundle_items_search_sku: %product_2%
                 selection_item_default_qty: 20
                 selection_item_user_defined_qty: No
                 selection_item_position: 20
@@ -1096,10 +1105,10 @@ grouped_product:
 
 duplicate_grouped:
     product_attribute_set: Default
-    general_name: Duplicate Grouped Product
+    general_name: Duplicate Grouped Product(%randomize%)
     general_description: Description for Grouped Product
     general_short_description: Short Description for Grouped Product
-    general_sku: grouped_sku
+    general_sku: grouped_sku_%randomize%
     general_news_from: %currentDate%
     general_news_to: %currentDate%
     general_url_key: grouped-product-url-key
@@ -1121,20 +1130,20 @@ duplicate_grouped:
     gift_options_allow_gift_message: Yes
     websites: Main Website
     categories: Default Category
-    related_data: *relatedProductsData
-    up_sells_data: *upSellsProductsData
-    cross_sells_data: *crossSellsProductsData
+    related_data: *relatedDuplicate
+    up_sells_data: *upSellsDuplicate
+    cross_sells_data: *crossSellsDuplicate
     associated_grouped_data:
         associated_grouped_1:
-            associated_search_sku: %noValue%
+            associated_search_sku: %product_1%
             associated_product_position: 3
             associated_product_default_qty: 30
         associated_grouped_2:
-            associated_search_sku: %noValue%
+            associated_search_sku: %product_2%
             associated_product_position: 2
             associated_product_default_qty: 20
         associated_grouped_3:
-            associated_search_sku: %noValue%
+            associated_search_sku: %product_3%
             associated_product_position: 1
             associated_product_default_qty: 10
 
@@ -1223,10 +1232,10 @@ configurable_product:
 duplicate_configurable:
     product_attribute_set: Default
     configurable_attribute_title: %noValue%
-    general_name: Duplicate Configurable Product
+    general_name: Duplicate Configurable Product(%randomize%)
     general_description: Description for Configurable Product
     general_short_description: Short Description for Configurable Product
-    general_sku: configurable_sku
+    general_sku: configurable_sku_%randomize%
     general_news_from: %currentDate%
     general_news_to: %currentDate%
     general_url_key: configurable-product-url-key
@@ -1257,9 +1266,9 @@ duplicate_configurable:
     gift_options_allow_gift_message: Yes
     websites: Main Website
     categories: Default Category
-    related_data: *relatedProductsData
-    up_sells_data: *upSellsProductsData
-    cross_sells_data: *crossSellsProductsData
+    related_data: *relatedDuplicate
+    up_sells_data: *upSellsDuplicate
+    cross_sells_data: *crossSellsDuplicate
     custom_options_data: *customOptionsData
 
 #*********************************************
@@ -1352,10 +1361,10 @@ downloadable_product:
 
 duplicate_downloadable:
     product_attribute_set: Default
-    general_name: Duplicate Downloadable Product
+    general_name: Duplicate Downloadable Product(%randomize%)
     general_description: Description for Downloadable Product
     general_short_description: Short Description for Downloadable Product
-    general_sku: downloadable_sku
+    general_sku: downloadable_sku_%randomize%
     general_news_from: %currentDate%
     general_news_to: %currentDate%
     general_url_key: downloadable-product-url-key
@@ -1381,9 +1390,9 @@ duplicate_downloadable:
     gift_options_allow_gift_message: Yes
     websites: Main Website
     categories: Default Category
-    related_data: *relatedProductsData
-    up_sells_data: *upSellsProductsData
-    cross_sells_data: *crossSellsProductsData
+    related_data: *relatedDuplicate
+    up_sells_data: *upSellsDuplicate
+    cross_sells_data: *crossSellsDuplicate
     custom_options_data: *customOptionsData
     downloadable_information_data:
         downloadable_samples_title: Samples Title %randomize%
