--- a/fixture/enterprise/core/Mage/GiftWrapping/data/GiftWrapping.yml
+++ b/fixture/enterprise/core/Mage/GiftWrapping/data/GiftWrapping.yml
@@ -25,6 +25,16 @@
 # @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
 #
 ---
+#*********************************************
+#*      Gift Wrapping on Product Page        *
+#*********************************************
+product_gift_message_and_wrapping_all_enable:
+    gift_options_allow_gift_message_default: No
+    gift_options_allow_gift_message: Yes
+    gift_options_allow_gift_wrapping_default: No
+    gift_options_allow_gift_wrapping: Yes
+    gift_options_price_for_gift_wrapping: 1.01
+
 #Test data for Gift Wrapping
 
 gift_wrapping_with_image:
