--- a/fixture/enterprise/core/Mage/SystemConfiguration/uimap/admin/SystemConfiguration.yml
+++ b/fixture/enterprise/core/Mage/SystemConfiguration/uimap/admin/SystemConfiguration.yml
@@ -56,7 +56,7 @@ system_configuration:
                                         allow_gift_wrapping_on_order_level: //select[@id='sales_gift_options_wrapping_allow_order']
                                         allow_gift_wrapping_for_order_items: //select[@id='sales_gift_options_wrapping_allow_items']
                                         allow_gift_receipt: //select[@id='sales_gift_options_allow_gift_receipt']
-                                        allow_printed_card: //select[@id='sales_gift_options_allow_printed_card']
+                                        allow_gift_printered_card: //select[@id='sales_gift_options_allow_printed_card']
                                     fields:
                                         default_price_for_printed_card: //input[@id='sales_gift_options_printed_card_price']
                 -
